styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');

@font-face {
  font-family: 'ClassiqueSaigon';
  scr: url('/fonts/ClassiqueSaigon.woff2') format('woff2'),
    url('/fonts/ClassiqueSaigon.woff') format('woff'),
    url('/fonts/ClassiqueSaigon.otf') format('opentype'),
    url('/fonts/ClassiqueSaigon.ttf') format('truetype');
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Montserrat' !important;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.w-60 {
  width: 60%;
}

.hero-text {
  font-size: 3rem;
  color: #2b2b2b;
}
.footer {
  background-color: #4e603e;
  color: #e6d3bc;
}

.bg-culture {
  background-color: #f8f6f1;
}

.h-130 {
  height: 130px;
}

.font-classique-saigon {
  //font-family: 'ClassiqueSaigon';
  font-family: 'Montserrat' !important;
  font-weight: 500;
}

.font-size-18 {
  font-size: 18px;
}

.font-size-32 {
  font-size: 32px;
}

.color-primary {
  color: #4e603e;
}

.color-d-sienna {
  color: #3c1d0f;
}

.color-seal-brown {
  color: #662c0a;
}
.color-white {
  color: #fdfeff;
}

.color-copper-red {
  color: #be7655;
}

.font-weight-bold {
  font-weight: bold !important;
}
.font-weight-700 {
  font-weight: 700 !important;
}

.font-italic {
  font-style: italic;
}

.font-weight-900 {
  font-weight: 900;
}

.button-primary {
  font-family: 'Montserrat';
  background-color: #4e603e;
  color: #fff;
  border: none;
  padding: 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  border-radius: 5px;
}

.button-secondary {
  font-family: 'Montserrat';
  color: #4e603e !important;
  border: 1px solid #4e603e !important;
  background-color: #fff !important;
  border-radius: 5px !important;
  cursor: pointer;
  padding: 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

.font-300 {
  font-weight: 300 !important;
}

.font-400 {
  font-weight: 400 !important;
}

.dashed-bottom {
  border-bottom: 1px dashed #662c0af4;
}
.dashed-bottom-cream {
  border-bottom: 1px dashed #e6d3bc;
}

.mh-80 {
  min-height: 80px;
}
.menu-bg {
  background-image: url('/assets/Kaunomenu.png');
  background-repeat: no-repeat;
  background-size: 20vh;
}

.bg-about-us {
  background-image: url('/assets/Hero-about-us.png');
  background-repeat: no-repeat;
  background-size: cover;
}

.hero {
  height: 100vh;
  background-image: url('/assets/home/HeroWebsite.png');
  background-size: cover;
}

.about-hero-text {
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
    -1px -1px 0 rgba(78, 96, 62, 0.5), 1px -1px 0 rgba(78, 96, 62, 0.5),
    -1px 1px 0 rgba(78, 96, 62, 0.5), 1px 1px 0 rgba(78, 96, 62, 0.5);
  font-weight: 700 !important;
}

.about-text {
  font-size: 1.125rem;
}

.bg-boba {
  position: absolute;
  right: 15px;
  transform: translateY(70%) rotate(15deg);
  z-index: -1;
}

.bg-about {
  background-image: url('/assets/about.png');
  background-repeat: no-repeat;
  background-position: center;
}

.contact-about {
  background-image: url('/assets/contactus/Vector.svg');
  background-repeat: no-repeat;
  background-position: left bottom;
  background-size: 45%;
  position: absolute;
  width: 100%;
  height: 100vh;
  left: -12px;
}
.image {
  rotate: 15deg;
  overflow: hidden;
}

.starters {
  background-image: url('/assets/menu/creamVector.svg');
  background-repeat: no-repeat;
  background-size: 45%;
  background-position: right bottom;
}

.menu-main {
  background-image: url('/assets/menu/greenVector.svg'),
    url('/assets/menu/cherryGreenBrown.svg');
  background-repeat: no-repeat, no-repeat;
  background-size: 45%, 15%;
  background-position: left bottom, left top;
}

.rsv-box {
  height: 350px;
}
@media only screen and (max-width: 991px) {
  .contact-about {
    background-image: url('/assets/contactus/Vector90.svg');
    background-repeat: no-repeat;
    background-position: left top;
    background-size: 14vw;
    z-indez: -1;
  }
  .bg-contact-about-image {
    background-image: url('/assets/contactus/Hero-ContactUs.svg');
    z-index: -2;
    left: 12px;
  }
  .contact-about-image {
    width: 10%;
    display: none;
  }
  .image {
    transform: translateY(-100px);
    margin-right: 45px;
  }
  .hero {
    background-image: url('/assets/HeroMobile.png');
    background-size: cover;
  }
}

@media only screen and (max-width: 767px) {
  .hero-text {
    font-size: 2rem;
  }

  .bg-boba {
    position: fixed;
    transform: translateY(70%) rotate(15deg);
    z-index: -1;
  }
}

